<?xml version="1.0"?>
<package format="2">
  <name>r2b_arm</name>
  <version>1.0.0</version>
  <description>A ROS metapackage containing ROS packages to simulate and control the basic 2R manipulator.</description>
  <maintainer email="roboticsclub.iiitdm@gmail.com">Robotics Club, IIITDM Kancheepuram</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
