<?xml version="1.0"?>
<package format="2">
  <name>r2b_control</name>
  <version>1.0.0</version>
  <description>Main package containing nodes, and launch files for execution of control algorithms, and simulations.</description>

  <maintainer email="roboticsclub.iiitdm@gmail.com">Robotics Club, IIITDM Kancheepuram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>r2b_description</exec_depend>
  <exec_depend>r2b_env</exec_depend>

</package>
