<?xml version="1.0"?>
<package format="2">
  <name>r2b_description</name>
  <version>1.0.0</version>
  <description>Contains resources describing the geometry, actuators, and sensors of the robot.</description>

  <maintainer email="roboticsclub.iiitdm@gmail.com">Robotics Club, IIITDM Kancheepuram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>r2b_utility</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>r2b_utility</exec_depend>

</package>
